--- a/notebook/rise.css
+++ b/notebook/rise.css
@@ -16,6 +16,10 @@
     box-shadow: none;
 }
 
+.reveal pre code {
+    max-height: 650px;
+}
+
 .reveal h1, .reveal h2, .reveal h3, .reveal h4, .reveal h5, .reveal h6 {
     color: #0072c1;
 }
