--- a/notebook/rise.css
+++ b/notebook/rise.css
@@ -3,28 +3,19 @@
     font-family: "Work Sans", sans-serif;
 }
 
-.reveal .slides section {
+.reveal .slides .stack section {
     text-align: left;
     font-size: smaller;
 }
 
-.reveal pre {
-    background-color: #f5f5f5;
-    width: 100%;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    box-shadow: none;
-    margin: 1em 0;
-}
-
-.reveal pre code {
+.reveal .slides .stack pre code {
     max-height: 650px;
 }
 
-.reveal h1, .reveal h2, .reveal h3, .reveal h4, .reveal h5, .reveal h6 {
+.reveal .slides .stack  h1, .reveal .slides .stack h2, .reveal .slides .stack h3 {
     color: #0072c1;
 }
 
-.reveal h1 {
+.reveal .slides .stack h1 {
     font-size: 300%;
 }
